--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 1.65-9
+
+OVERVIEW
+
+    o Minor internal changes.
+
         CHANGES IN spatstat.linnet VERSION 1.65-8
 
 OVERVIEW
