--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,20 @@
 
-        CHANGES IN spatstat.linnet VERSION 2.1-1.002
+        CHANGES IN spatstat.linnet VERSION 2.1-1.003
 
 OVERVIEW
 
+    o Extensions to rhohat.lpp and rhohat.lppm.
+    
     o Internal bug fixes.
 
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o rhohat.lpp, rhohat.lppm
+    New option (smoother='piecewise') computes a piecewise-constant
+    estimate of rho(z).
+
+    o rhohat.lpp, rhohat.lppm
+    The result now includes the 'average' intensity rho.
 
         CHANGES IN spatstat.linnet VERSION 2.1-1
 
