--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 2.2-1
+
+OVERVIEW
+
+    o Minor changes to satisfy CRAN.
+
         CHANGES IN spatstat.linnet VERSION 2.2-0
 
 OVERVIEW
