--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 2.3-0.001
+
+OVERVIEW
+
+    o Tweaks to help files.
+
+
         CHANGES IN spatstat.linnet VERSION 2.3-0
 
 OVERVIEW
