Reorganise NEWS files

--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,11 @@
 
-        CHANGES IN spatstat.linnet VERSION 2.3-0.002
+        CHANGES IN spatstat.linnet VERSION 2.3-0.003
 
 OVERVIEW
 
     o More control over resolution of 'linim' objects
     
-    o Tweaks to help files.
+    o Improved documentation.
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
@@ -108,7 +108,12 @@ NEW FUNCTIONS
 
     o rjitterlpp
     Apply random displacements to the points on a linear network.
-    
+
+    o densityHeat.lpp
+    Diffusion kernel estimation of intensity on a linear network.
+    (formerly known as 'densityHeatlpp' and 'densityHeat', this is
+    now a method for the new generic 'densityHeat')
+
 SIGNIFICANT USER-VISIBLE CHANGES
 
     o densityEqualSplit
@@ -119,6 +124,9 @@ SIGNIFICANT USER-VISIBLE CHANGES
     is now renamed 'densityHeat.lpp' and is a method for the generic
     'densityHeat'.
 
+    o density.lpp
+    Accelerated when the pattern contains duplicated points.
+    
 BUG FIXES
 
     o density.lpp
@@ -143,12 +151,31 @@ SIGNIFICANT USER-VISIBLE CHANGES
     'densityHeat' has been temporarily renamed 'densityHeatlpp',
     to prevent errors in the package checking process.
 
+    o [.linim
+    Accelerated.
+
+
 BUG FIXES
+
+    o deviance.lppm, pseudoR2.lppm
+    Results were completely incorrect, due to a coding error.
+    Fixed.
 
     o density.lpp
     Crashed if 'weights' were given and 'x' contained duplicated points.
     [Spotted by Andrea Gilardi]
     Fixed.
+
+    o Lcross.inhom, Kcross.inhom, Kmulti.inhom
+    The option 'correction="none"' was accepted but ignored.
+    [Spotted by Corey Anderson.]
+    Fixed.
+
+    o simulate.rhohat
+    Crashed when applied to rhohat objects computed from data
+    on a linear network.
+    Fixed.
+    
 
         CHANGES IN spatstat.linnet VERSION 1.65-9
 
