--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 2.3-2.001
+
+OVERVIEW
+
+    o Minor internal changes to package information.
+
+
         CHANGES IN spatstat.linnet VERSION 2.3-2
 
 OVERVIEW
