--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
 
-        CHANGES IN spatstat.linnet VERSION 2.3-2.001
+        CHANGES IN spatstat.linnet VERSION 2.3-2.002
 
 OVERVIEW
 
     o Minor internal changes to package information.
+
+    o Minor improvements and bug fixes.
 
 
         CHANGES IN spatstat.linnet VERSION 2.3-2
