--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
 
-        CHANGES IN spatstat.linnet VERSION 2.999-999.011
+        CHANGES IN spatstat.linnet VERSION 2.999-999.012
 
 OVERVIEW
 
-    o We thank Mehdi Moradi, Gopalan Nair and James Pope for contributions.
+    o We thank Greg McSwiggan, Mehdi Moradi, Gopalan Nair and James Pope
+    for contributions.
     
     o spatstat.linnet now depends on the new packages 'spatstat.explore'
     and 'spatstat.model' rather than the old 'spatstat.core'.
@@ -49,6 +50,9 @@ NEW FUNCTIONS
     o bw.relrisk.lpp
     This function replaces 'bw.relrisklpp'
     and is a method for the generic 'bw.relrisk'.
+
+    o rThomaslpp
+    Simulate Thomas cluster process on a network.
     
 SIGNIFICANT USER-VISIBLE CHANGES
 
