--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 
-        CHANGES IN spatstat.linnet VERSION 2.999-999.020
+        CHANGES IN spatstat.linnet VERSION 2.999-999.021
 
 OVERVIEW
 
@@ -25,6 +25,8 @@ OVERVIEW
     when 'ratio=TRUE'.
 
     o U-shaped curves in 'rhohat'.
+
+    o Faster computation of the length of the disc in the shortest path metric.
     
     o Minor improvements and bug fixes.
 
@@ -34,6 +36,9 @@ OVERVIEW
 
 NEW FUNCTIONS
 
+    o lineardisclength
+    Compute the length of the disc in the shortest-path metric.
+    
     o marks.linnet, marks<-.linnet
     Marks attached to the vertices and segments of a linear network.
     
