Tweak densityQuick.lpp

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.0-1
+
+OVERVIEW
+
+    o Internal improvements.
+
         CHANGES IN spatstat.linnet VERSION 3.0-0
 
 OVERVIEW
