Tweak C code to placate package checker

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.0-2
+
+OVERVIEW
+
+    o Internal tweaks to satisfy package checker.
+
         CHANGES IN spatstat.linnet VERSION 3.0-1
 
 OVERVIEW
