--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.0-4.001
+
+OVERVIEW
+
+    o Internal tweaks.
+    
         CHANGES IN spatstat.linnet VERSION 3.0-4
 
 OVERVIEW
