Fixed an omission - sent to CRAN

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.0-6
+
+OVERVIEW
+
+    o Internal improvements and bug fixes.
+
         CHANGES IN spatstat.linnet VERSION 3.0-5
 
 OVERVIEW
