--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.1-3
+
+OVERVIEW
+
+    o Minor corrections to help files.
+
+
         CHANGES IN spatstat.linnet VERSION 3.1-2
 
 OVERVIEW
