--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,11 @@
 
+        CHANGES IN spatstat.linnet VERSION 3.1-3.001
+
+OVERVIEW
+
+    o Added a full list of functions to the main help file.
+
+
         CHANGES IN spatstat.linnet VERSION 3.1-3
 
 OVERVIEW
