--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,17 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.1-3.001
+        CHANGES IN spatstat.linnet VERSION 3.1-3.002
 
 OVERVIEW
 
     o Added a full list of functions to the main help file.
 
+    o Intersection of a 2D tessellation with a network.
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o intersect.lintess
+    Can compute the intersection between a two-dimensional tessellation
+    and a linear network (yielding a tessellation on the network).
 
         CHANGES IN spatstat.linnet VERSION 3.1-3
 
