--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,13 @@
 
-        CHANGES IN spatstat.linnet VERSION 3.1-3.003
+        CHANGES IN spatstat.linnet VERSION 3.1-3.004
 
 OVERVIEW
 
     o Added a full list of functions to the main help file.
 
     o Intersection of a 2D tessellation with a network.
+
+    o Internal improvements.
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
